# federlet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: pre-push
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ADR-005-HUBLESS-FEDERATED-DIRECTORY-DISCOVERY.md  ADR-005-HUBLESS-FEDERATION-CORE.md
examples/: host.py
scripts/: check.sh
src/federlet/: __init__.py  _time.py  admission.py  audit.py  bootstrap.py  capability.py  certauth.py  client.py  crypto.py  discovery.py  fanout.py  health.py  lowlevel.py  membership.py  models.py  net.py  node.py  operations.py  prelude.py  publication.py  query.py  reasons.py  refresh.py  responses.py  signing.py  urls.py
src/federlet/protocols/: __init__.py  manifest_store.py  membership_store.py  nonce.py  rate_limit.py
src/pimx/: __init__.py  _time.py  admission.py  client.py  crypto.py  membership.py  models.py  refresh.py  signing.py
src/pimx/protocols/: __init__.py  admission.py  nonce.py
tests/: harness.py  test_certauth.py  test_fanout.py  test_federation.py  test_neutrality.py  test_signed_http_invariants.py  test_unit.py
