[project]
name = "pimx"
version = "0.1.0"
description = "Peer Introduction and Manifest Exchange: a hubless HTTPS federation protocol for directory nodes."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pimx"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
