[project]
name = "federlet"
version = "0.1.0"
description = "Federlet: a hubless HTTPS federation protocol for directory nodes."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "rfc8785>=0.1.4",
]

# federlet never imports a cache backend; it only calls a NonceCache the host
# injects. cashews is the recommended backend but not required — install it
# with `pip install federlet[cashews]` (or bring your own object of that shape).
[project.optional-dependencies]
cashews = ["cashews>=7.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/federlet"]

[dependency-groups]
dev = [
    "cashews>=7.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
