[project]
name = "federlet"
version = "0.5.2"
description = "Async Python library for decentralized, hubless federation between peer services."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "Vlad Andreev", email = "ukw2d@proton.me" },
]
maintainers = [
  { name = "Vlad Andreev", email = "ukw2d@proton.me" },
]
keywords = [
  "async-python",
  "decentralized",
  "federation",
  "protocol",
  "manifest",
  "ed25519",
  "signed-requests",
  "signed-http",
  "peer-discovery",
  "service-discovery",
  "replay-protection",
  "admission-policy",
  "ssrf-protection",
  "zero-trust",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=42.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "rfc8785>=0.1.4",
]

# federlet never imports a cache backend; it only calls a NonceCache the host
# injects. cashews is the recommended backend but not required — install it
# with `pip install federlet[cashews]` (or bring your own object of that shape).
[project.optional-dependencies]
cashews = ["cashews>=7.5.0"]

[project.urls]
Homepage = "https://github.com/ukw2d/federlet"
Repository = "https://github.com/ukw2d/federlet"
Issues = "https://github.com/ukw2d/federlet/issues"
Documentation = "https://github.com/ukw2d/federlet#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/federlet"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/docs",
  "/pyproject.toml",
  "/src/federlet",
  "/tests",
  "/uv.lock",
]

[dependency-groups]
dev = [
    "cashews>=7.5.0",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = [
  # Keep public enum stringification stable unless we intentionally migrate it.
  "UP042",
]

[tool.mypy]
python_version = "3.11"
files = ["src/federlet"]
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
